# PyNEAppLES_GroupProj

./: .gitignore  Module_call.py  README.md  acetaldehyde.json  calc_spectrum_v2.py  pyproject.toml  repre_sample_2D.py  repsample_acetylcall.py  repsample_testcall.py  test_module_call.py
.github/: ci.yml
.github/workflows/: ci.yml
2000_geometries_low_level_calculation/: low_level_2k.py
Test_Module/: pyproject.toml
Test_Module/src/: Module_call.py
Test_Module/src/test_module/: repre_sample_2D.py
acetaldehyde/: README.md  harmonic_samples.xyz
acetaldehyde/Results_1state/: spectrum-1-geom-low.tsv  spectrum-1-geom.tsv  spectrum-10-geom-low.tsv  spectrum-10-geoms.tsv  spectrum-3-geom-low.tsv  spectrum-3-geoms.tsv  spectrum-30-geom-low.tsv  spectrum-30-geoms.tsv  spectrum-5-geom-low.tsv  spectrum-5-geoms.tsv  spectrum-50-geom-low.tsv  spectrum-50-geoms.tsv
acetaldehyde/Results_3states/: spectrum-1-high.tsv  spectrum-1-low.tsv  spectrum-10-high.tsv  spectrum-10-low.tsv  spectrum-3-high.tsv  spectrum-3-low.tsv  spectrum-30-high.tsv  spectrum-30-low.tsv  spectrum-5-high.tsv  spectrum-5-low.tsv  spectrum-50-high.tsv  spectrum-50-low.tsv
acetaldehyde/subsamples/: reduced_samples_1.xyz  reduced_samples_10.xyz  reduced_samples_3.xyz  reduced_samples_30.xyz  reduced_samples_5.xyz  reduced_samples_50.xyz
acetaldehyde/subsamples_1state/: reduced_samples_1.xyz  reduced_samples_10.xyz  reduced_samples_3.xyz  reduced_samples_30.xyz  reduced_samples_5.xyz  reduced_samples_50.xyz
acetoaldehyde/: optfreq_mp2_vtz.out
high_level_calculations/: high_level.py
high_level_calculations/1st_state/: high_level_1st.py
low_level_calculations/: low_level.py
low_level_calculations/1st_state/: low_level_1st.py
src/pyneapples/: rep_sampler_2d.py
src_PyNEAppLES_Call/: __init__.py
tests/: test_module_call.py
