[project]
name = "pyneapples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Hamish Ruthven", email = "nn22529@bristol.ac.uk" }
]
requires-python = ">=3.13"
dependencies = ['numpy',
		'matplotlib',
		'scipy',
		'joblib',
		'pytest']

[project.scripts]
rep_sampler_2D = "rep_sampler_2D:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
