[project]
name = "test-module"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Hamish Ruthven", email = "hamishruthven@gmail.com" }
]
requires-python = ">=3.13"
dependencies = ['numpy',
		'matplotlib',
		'scipy',
		'joblib']

[project.scripts]
test-module = "test_module:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
